--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "-": "^0.0.1",
     "@babel/node": "^7.26.0",
+    "@hookform/resolvers": "^4.1.0",
     "@tailwindcss/postcss": "^4.0.6",
     "D": "^1.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
