--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "D": "^1.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-navigation": "^1.0.6",
+    "orval": "^7.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
